fix(global): 💅🏻 improve dark mode

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -8,23 +8,26 @@
   --color-text-interactive: #1da1f2;
   --color-text-error: #e53e3e;
   --color-text-disabled: #a0aec0;
+  --color-text-inverse: #2d3748;
 
   --color-bg-primary: #2d3748;
   --color-bg-secondary: #283141;
   --color-bg-ternary: #6415ff;
+  --color-bg-inverse: #f7fafc;
 }
 
 .light {
   --color-text-primary: #2d3748;
   --color-text-secondary: #4a5568;
   --color-text-interactive: #3c366b;
-
   --color-text-error: #e53e3e;
   --color-text-disabled: #a0aec0;
+  --color-text-inverse: #f7fafc;
 
   --color-bg-primary: #ffffff;
   --color-bg-secondary: #edf2f7;
   --color-bg-ternary: #6415ff;
+  --color-bg-inverse: #2d3748;
 }
 
 /* purgecss start ignore */
